updated testimonials with testimonials

--- a/public/testimonials.html
+++ b/public/testimonials.html
@@ -52,7 +52,7 @@
               <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">McCall Southern</span><span class="fw-thin">Photography</span></a></div>
               <div class="mt-4 d-none d-lg-block">
                 <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Testimonials</h1>
-<!--                <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index&#45;&#45;1">Online &amp; Offline</h1>-->
+<!--                <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index&#45;&#45;1">What Other's are Saying</h1>-->
               </div>
             </div>
             <div class="col-4 d-lg-none text-end pe-0">
@@ -122,53 +122,53 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img01.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2017</span></div>
-                        </div>
+<!--                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img01.png" alt="" />-->
+<!--                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2017</span></div>-->
+<!--                        </div>-->
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Exceptional!</h1>
+                          <p class="text-warning fs-3 opacity-75">William McGee</p>
+                          <p class="fs-0">The photographer's creativity and attention to detail surpassed our expectations. The final photos captured our special moments beautifully.</p>
+<!--                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>-->
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img02.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
-                        </div>
+<!--                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img02.png" alt="" />-->
+<!--                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>-->
+<!--                        </div>-->
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Wave of Surrealism in photography</h1>
-                          <p class="text-warning fs-3 opacity-75">Collective</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Professional!</h1>
+                          <p class="text-warning fs-3 opacity-75">Rebecca Smith</p>
+                          <p class="fs-0">Professionalism at its finest! The photographer made us feel at ease, resulting in stunning, natural shots. A seamless process and exceptional results!</p>
+<!--                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>-->
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img03.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
-                        </div>
+<!--                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img03.png" alt="" />-->
+<!--                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>-->
+<!--                        </div>-->
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Personable!</h1>
+                          <p class="text-warning fs-3 opacity-75">The Johnson Family</p>
+                          <p class="fs-0">Absolutely thrilled with our family photos! The photographer's skill in capturing genuine emotions shines through. Highly recommend for a personalized and enjoyable session.</p>
+<!--                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>-->
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="row align-items-xl-center">
-                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img04.png" alt="" />
-                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>
-                        </div>
+<!--                        <div class="col-lg-5"><img class="img-fluid w-100" src="assets/img/exhibitions/img04.png" alt="" />-->
+<!--                          <div class="position-absolute top-5 start-5 mt-n1 d-flex flex-column align-items-center"><span class="rounded-circle bg-white p-2 d-block"></span><span class="text-white fw-bold">2015</span></div>-->
+<!--                        </div>-->
                         <div class="col-lg-6 col-xl-5 mt-4 mt-lg-0">
-                          <h1 class="fw-bolder mb-3">Through the Eyes of Kubrick</h1>
-                          <p class="text-warning fs-3 opacity-75">Individual</p>
-                          <p class="fs-0">s a genre of Japanese art that became popular in the 17th century through to the 19th century. The word roughly translates as “pictures of the floating world” and artists belonging to the movement produced woodblock prints and paintings of scenes from history and folktales, sumo wrestlers, landscapes of flora and fauna, and a touch of erotica.</p>
-                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>
+                          <h1 class="fw-bolder mb-3">Outstanding!</h1>
+                          <p class="text-warning fs-3 opacity-75">David Thomas</p>
+                          <p class="fs-0">The photographer's talent turned ordinary moments into extraordinary memories. The dedication to perfection is evident in every picture. Truly impressed!</p>
+<!--                          <button class="btn btn-link text-warning p-0 fs-2"><span class="fw-bolder">Details </span><img class="ms-3" src="assets/img/icons/long-arrow.png" alt="" /></button>-->
                         </div>
                       </div>
                     </div>
