--- a/public/services.html
+++ b/public/services.html
@@ -52,7 +52,7 @@
               <div class="d-inline-block"><a class="navbar-brand pt-0 fs-3 text-black d-flex align-items-center" href="index.html"><img class="img-fluid" src="assets/img/icons/logo-icon.png" alt="" /><span class="fw-bolder ms-2">McCall Southern</span><span class="fw-thin">Photography</span></a></div>
               <div class="mt-4 d-none d-lg-block">
                 <h1 class="text-uppercase fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Services</h1>
-<!--                <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index&#45;&#45;1">Online &amp; Offline</h1>-->
+                <h1 class="d-none d-md-block fw-bolder text-outlined fs-7 text-white lh-1 mt-n4 position-relative z-index--1">Making Memories</h1>
               </div>
             </div>
             <div class="col-4 d-lg-none text-end pe-0">
@@ -104,7 +104,7 @@
           </div>
           <div class="row g-0 mt-4 d-lg-none">
             <h1 class="text-uppercase ps-0 fs-lg-7 fs-5 fw-bolder text-300 lh-1 position-relative z-index-0">Services</h1>
-            <h1 class="fw-bolder text-outlined ps-0 fs-lg-7 fs-sm-6 fs-5 text-white lh-1 mt-sm-n4 mt-n3 position-relative z-index--1">Online &amp; Offline</h1>
+            <h1 class="fw-bolder text-outlined ps-0 fs-lg-7 fs-sm-6 fs-5 text-white lh-1 mt-sm-n4 mt-n3 position-relative z-index--1">Making Memories</h1>
           </div>
         </div>
       </nav>
