--- a/blog.html
+++ b/blog.html
@@ -155,7 +155,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-6 d-flex">
-              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img3.png" alt="" />
+              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img.png" alt="" />
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center"> <span class="fa-solid fa-circle-dot text-warning"></span>
                     <p class="text-300 m-0 ps-1">5min read</p>
