--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,7 @@
         <div class="container px-md-5">
           <div class="row g-4">
             <div class="col-lg-4 col-md-6 d-flex">
-              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img1.png" alt="" />
+              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img_1.png" alt="" />
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center"> <span class="fa-solid fa-circle-dot text-warning"></span>
                     <p class="text-300 m-0 ps-1">4min read</p>
@@ -136,7 +136,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-md-6 d-flex">
-              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img2.png" alt="" />
+              <div class="card border-0 mb-3"><img class="card-img-top" src="assets/img/blogs/img_2.png" alt="" />
                 <div class="d-flex align-items-center justify-content-between">
                   <div class="d-flex align-items-center"> <span class="fa-solid fa-circle-dot text-warning"></span>
                     <p class="text-300 m-0 ps-1">6min read</p>
